@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>jp.co.ntt.fw.spring.functionaltest</groupId>
   <artifactId>spring-functionaltest</artifactId>
-  <version>1.8.2.RELEASE</version>
+  <version>1.8.3.RELEASE</version>
   <packaging>pom</packaging>
   <modules>
     <module>spring-functionaltest-env</module>
@@ -12,16 +12,16 @@
     <module>spring-functionaltest-domain</module>
     <module>spring-functionaltest-web</module>
     <module>spring-functionaltest-env-oauth2</module>
+    <module>spring-functionaltest-web-oauth2-client</module>
     <module>spring-functionaltest-web-oauth2-resource</module>
     <module>spring-functionaltest-web-thymeleaf</module>
-    <module>spring-functionaltest-web-oauth2-resource-thymeleaf</module>
     <module>spring-functionaltest-initdb</module>
     <module>spring-functionaltest-selenium</module>
   </modules>
   <parent>
     <groupId>org.terasoluna.gfw</groupId>
     <artifactId>terasoluna-gfw-parent</artifactId>
-    <version>5.7.2.RELEASE</version>
+    <version>5.7.3.RELEASE</version>
     <relativePath />
   </parent>
 
@@ -315,14 +315,6 @@
       </dependency>
       <!-- == End phantomjsdriver == -->
 
-      <!-- == Begin REST-assured == -->
-      <dependency>
-        <groupId>io.rest-assured</groupId>
-        <artifactId>rest-assured</artifactId>
-        <version>${io.restassured.version}</version>
-      </dependency>
-      <!-- == End REST-assured == -->
-
       <!-- == Begin GreenMail-Spring == -->
       <dependency>
         <groupId>com.icegreen</groupId>
@@ -349,6 +341,11 @@
         <groupId>io.github.bonigarcia</groupId>
         <artifactId>webdrivermanager</artifactId>
         <version>${webdrivermanager.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.httpcomponents.client5</groupId>
+        <artifactId>httpclient5</artifactId>
+        <version>${httpclient5.version}</version>
       </dependency>
       <!-- == End Test == -->
 
@@ -402,19 +399,19 @@
     <org.apache.maven.archetype.version>2.2</org.apache.maven.archetype.version>
     <org.apache.maven.wagon.version>1.0-beta-7</org.apache.maven.wagon.version>
     <org.springframework.build.aws.version>3.0.0.RELEASE</org.springframework.build.aws.version>
-    <postgresql.version>42.5.1</postgresql.version>
-    <ojdbc.version>21.8.0.0</ojdbc.version>
-    <webdrivermanager.version>5.3.1</webdrivermanager.version>
+    <postgresql.version>42.7.1</postgresql.version>
+    <ojdbc.version>23.3.0.23.09</ojdbc.version>
+    <webdrivermanager.version>5.6.3</webdrivermanager.version>
+    <httpclient5.version>5.2.3</httpclient5.version>
     <com.codeborne.version>1.5.0</com.codeborne.version>
-    <io.restassured.version>5.3.0</io.restassured.version>
-    <greenmail-spring.version>1.6.11</greenmail-spring.version>
-    <cxf-rt.version>3.5.5</cxf-rt.version>
+    <greenmail-spring.version>1.6.15</greenmail-spring.version>
+    <cxf-rt.version>3.5.7</cxf-rt.version>
     <jaxb-core.version>2.3.0.1</jaxb-core.version>
-    <jaxb-impl.version>2.3.7</jaxb-impl.version>
+    <jaxb-impl.version>2.3.9</jaxb-impl.version>
     <jakarta.jws-api.version>2.1.0</jakarta.jws-api.version>
     <jakarta.interceptor-api.version>1.2.5</jakarta.interceptor-api.version>
     <logback-db.version>1.2.11.1</logback-db.version>
-    <pdfbox.version>2.0.27</pdfbox.version>
+    <pdfbox.version>2.0.30</pdfbox.version>
     <!-- == Project Properties == -->
     <project.env.main.directory>src/main</project.env.main.directory>
     <project.env.target.name>spring-functionaltest-env</project.env.target.name>
@@ -538,13 +535,6 @@
       </properties>
     </profile>
     <profile>
-      <id>weblogic-oracle</id>
-      <properties>
-        <project.env.main.directory>configs/weblogic-oracle</project.env.main.directory>
-        <project.env.buildFinalName>${project.artifactId}-${project.version}-weblogic-oracle</project.env.buildFinalName>
-      </properties>
-    </profile>
-    <profile>
       <id>jdk11</id>
       <activation>
         <jdk>11</jdk>
@@ -561,6 +551,16 @@
       </activation>
       <properties>
         <java-version>17</java-version>
+        <cargo.jvmargs>-Xms512m -Xmx1024m -Djava.locale.providers=COMPAT,CLDR,SPI -Djdk.tls.client.protocols=TLSv1.2 -Djdk.tls.server.protocols=TLSv1.2</cargo.jvmargs>
+      </properties>
+    </profile>
+    <profile>
+      <id>jdk21</id>
+      <activation>
+        <jdk>21</jdk>
+      </activation>
+      <properties>
+        <java-version>21</java-version>
         <cargo.jvmargs>-Xms512m -Xmx1024m -Djava.locale.providers=COMPAT,CLDR,SPI -Djdk.tls.client.protocols=TLSv1.2 -Djdk.tls.server.protocols=TLSv1.2</cargo.jvmargs>
       </properties>
     </profile>
